k8s/owncloud/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: owncloud
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "owncloud.rolancia.com"
  - port:
      number: 443
      name: api-https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: "owncloud-cert"
    hosts:
    - "owncloud.rolancia.com"
