k8s/owncloud/istio/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress
  namespace: owncloud
spec:
  hosts: 
  - 'owncloud.rolancia.com'
  gateways:
  - gateway
  http:
  - route:
    - destination: 
        host: owncloud
